--- a/nginx/node.conf
+++ b/nginx/node.conf
@@ -4,6 +4,9 @@ server {
   server_name localhost;
 
   location / {
+    limit_except GET {
+      deny  all;
+    }
     proxy_pass http://node:3000;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
